# telegram_chat_bot

./: Cargo.toml
.sqlx/: query-4648f3f18d24b264086a004a08741331805ca86c844280529c8814f54e04d9b3.json
src/: bot.rs  config.rs  gemini_handler.rs  main.rs  openai_handler.rs
