[package]
name = "telegram_chat_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
async-openai = "0.20"
log = "0.4"
pretty_env_logger = "0.5"
dotenv = "0.15"

# ---- НОВЫЕ ЗАВИСИМОСТИ ДЛЯ POSTGRESQL ----
tokio-postgres = { version = "0.7"}
thiserror = "1.0" # Для удобной обработки ошибок