[package]
name = "telegram_chat_bot"
version = "0.1.0"
edition = "2021"  # Исправлено с 2024

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.5"
dotenv = "0.15"
anyhow = "1.0"

# ---- ЗАВИСИМОСТИ ДЛЯ POSTGRESQL ----
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros"] }
thiserror = "1.0"

# ---- ЗАВИСИМОСТИ ДЛЯ HTTP ЗАПРОСОВ И JSON ----
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"